--- a/Notebooks/Beginner/module_1_introduction.ipynb
+++ b/Notebooks/Beginner/module_1_introduction.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5db0b65f",
+   "metadata": {},
+   "source": [
+    "<style>\n",
+    "    table, th, td {\n",
+    "        border: none;\n",
+    "        border-collapse: collapse;\n",
+    "    }\n",
+    "</style>\n",
+    "<table align=\"center\">\n",
+    "  <td align=\"center\">\n",
+    "        <img src=\"../../images/Python Namon2o.png\" style=\"padding-bottom:5px;\" />\n",
+    "  </td>\n",
+    "  <td align=\"center\"><a target=\"_blank\" href=\"https://colab.research.google.com/github/ahenkoraha/Python-Namon2o/blob/main/Notebooks/Beginner/module_1_introduction.ipynb\">\n",
+    "        <img src=\"https://i.ibb.co/2P3SLwK/colab.png\"  style=\"padding-bottom:5px;\" />Run in Google Colab</a></td>\n",
+    "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/ahenkoraha/Python-Namon2o/blob/main/Notebooks/Beginner/module_1_introduction.ipynb\">\n",
+    "        <img src=\"https://i.ibb.co/xfJbPmL/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "00dc7d7f",
    "metadata": {},
    "source": [
@@ -51,7 +73,7 @@
     "---\n",
     "### 💬 First Lines of Code\n",
     "#### 🌍 Greetings from Ghana!\n",
-    "![Map of Africa with Local Greetings](https://upload.wikimedia.org/wikipedia/commons/8/86/Africa_Map_Languages.png)"
+    "![Ghanaian Greetings](../../images/Welcome_gh.png)"
    ]
   },
   {
@@ -59,8 +81,18 @@
    "execution_count": null,
    "id": "e932a3c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Ghana!\n",
+      "Akwaaba! Welcome to Python Namon2o - Step by step, the Ghanaian way.\n"
+     ]
+    }
+   ],
    "source": [
+    "#run this code cell. use the play button or shift+enter\n",
     "print(\"Hello Ghana!\")\n",
     "print(\"Akwaaba! Welcome to Python Namon2o - Step by step, the Ghanaian way.\")"
    ]
@@ -70,7 +102,13 @@
    "id": "9c5fdfc5",
    "metadata": {},
    "source": [
-    "> Type and run your own greeting in Python!"
+    "#### 📝Activity: Print a Greeting\n",
+    "> Let's start by printing a simple greeting in Python. You can use the `print()` function to display messages. Just like how we greet each other in Ghana, we can print a friendly message.\n",
+    "\n",
+    "Type the code in the previous cell, customize the message, and run it to see the output.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -99,21 +137,27 @@
     "---\n",
     "### 📚 Useful Resources\n",
     "- ![Python](https://img.shields.io/badge/Python-Official-blue) [python.org](https://www.python.org/)\n",
-    "- ![Jupyter](https://img.shields.io/badge/Jupyter-Docs-orange) [jupyter.org/documentation](https://jupyter.org/documentation)\n",
-    "- ![CS50 Python](https://img.shields.io/badge/CS50-Python-red) [CS50 Intro to Python](https://cs50.harvard.edu/python/)\n",
-    "- ![African Languages](https://img.shields.io/badge/African%20Languages-UPenn-green) [UPenn African Languages](https://www.africa.upenn.edu/ALC/African_Languages.html)"
+    "- ![Jupyter](https://img.shields.io/badge/Jupyter-Docs-orange) [jupyter.org/documentation](https://jupyter.org/documentation)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0363b360",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
