--- a/Notebooks/Beginner/module_1_introduction.ipynb
+++ b/Notebooks/Beginner/module_1_introduction.ipynb
@@ -13,12 +13,12 @@
     "</style>\n",
     "<table align=\"center\">\n",
     "  <td align=\"center\">\n",
-    "        <img src=\"../../images/Python Namon2o.png\" style=\"padding-bottom:5px;\" />\n",
+    "        <img height=\"80\" src=\"../../images/Python Namon2o.png\" style=\"padding-bottom:5px;\" />\n",
     "  </td>\n",
     "  <td align=\"center\"><a target=\"_blank\" href=\"https://colab.research.google.com/github/ahenkoraha/Python-Namon2o/blob/main/Notebooks/Beginner/module_1_introduction.ipynb\">\n",
-    "        <img src=\"https://i.ibb.co/2P3SLwK/colab.png\"  style=\"padding-bottom:5px;\" />Run in Google Colab</a></td>\n",
+    "        <img height=\"40\" src=\"https://i.ibb.co/2P3SLwK/colab.png\"  style=\"padding-bottom:5px;\" />Run in Google Colab</a></td>\n",
     "  <td align=\"center\"><a target=\"_blank\" href=\"https://github.com/ahenkoraha/Python-Namon2o/blob/main/Notebooks/Beginner/module_1_introduction.ipynb\">\n",
-    "        <img src=\"https://i.ibb.co/xfJbPmL/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
+    "        <img height=\"40\" src=\"https://i.ibb.co/xfJbPmL/github.png\"  height=\"70px\" style=\"padding-bottom:5px;\"  />View Source on GitHub</a></td>\n",
     "</table>"
    ]
   },
@@ -38,7 +38,8 @@
     "- Understand what Python is and why it’s useful  \n",
     "- Learn how to run Python code in Jupyter Notebooks \n",
     "- Write your first lines of code \n",
-    "- Print culturally relevant messages"
+    "- Learn how to use the print() function\n",
+    "- Begin thinking like a programmer"
    ]
   },
   {
@@ -81,20 +82,91 @@
    "execution_count": null,
    "id": "e932a3c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Ghana!\n",
-      "Akwaaba! Welcome to Python Namon2o - Step by step, the Ghanaian way.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#run this code cell. use the play button or shift+enter\n",
     "print(\"Hello Ghana!\")\n",
     "print(\"Akwaaba! Welcome to Python Namon2o - Step by step, the Ghanaian way.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c108d201",
+   "metadata": {},
+   "source": [
+    "#### 🔑 Key Concept: print() Function\n",
+    "> print() is used to display text or output to the screen. Text is inside quotes (single('') or double(\"\")) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6328c1d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run this code cell. use the play button or shift+enter\n",
+    "print(\"Learning Python step by step\")\n",
+    "print('Python is fun!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b83a1936",
+   "metadata": {},
+   "source": [
+    ">You can print multiple pieces of information using commas. This included numbers and text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cee7589b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run this code cell. use the play button or shift+enter\n",
+    "print(\"You are learning\", \"Python\", \"today!\")\n",
+    "print(\"My name is\", 'Akua', \"and I am\", 20, \"years old.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7337852a",
+   "metadata": {},
+   "source": [
+    ">You can also print the results of calculations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdcbb77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run this code cell. use the play button or shift+enter\n",
+    "print(\"7 + 3 =\", 7 + 3)\n",
+    "print(\"3 times 4 is\", 3 * 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ba2d8c0",
+   "metadata": {},
+   "source": [
+    ">print multiple lines of text by using the \\n character to create a new line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aff0418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run this code cell. use the play button or shift+enter\n",
+    "print(\"Today we will learn:\\n1. What is Python\\n2. How to use print()\\n3. Why Python is useful\")"
    ]
   },
   {
@@ -105,7 +177,7 @@
     "#### 📝Activity: Print a Greeting\n",
     "> Let's start by printing a simple greeting in Python. You can use the `print()` function to display messages. Just like how we greet each other in Ghana, we can print a friendly message.\n",
     "\n",
-    "Type the code in the previous cell, customize the message, and run it to see the output.\n",
+    "Type the code in the previous cell with the greeting, customize the message, and run it to see the output.\n",
     "\n",
     "\n",
     "\n"
@@ -123,6 +195,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46fef66a",
+   "metadata": {},
+   "source": [
+    "#### 📝Activity: Introduce yourself\n",
+    "> Now, let's introduce ourselves! Use the `print()` function to display your name, age, favourite food, and a fun fact about yourself. \n",
+    "\n",
+    "✅ Try This:\n",
+    "1. Print your name and favorite food\n",
+    "2. Print your age and a short sentence about why you’re learning Python\n",
+    "3. Print a fun fact about yourself and your favourite number\n",
+    "\n",
+    "```python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba5edf41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Type and run your introduction in Python below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "90b07abc",
    "metadata": {},
    "source": [
@@ -136,8 +234,30 @@
    "source": [
     "---\n",
     "### 📚 Useful Resources\n",
-    "- ![Python](https://img.shields.io/badge/Python-Official-blue) [python.org](https://www.python.org/)\n",
-    "- ![Jupyter](https://img.shields.io/badge/Jupyter-Docs-orange) [jupyter.org/documentation](https://jupyter.org/documentation)\n"
+    "- [Python.org](https://www.python.org/about/gettingstarted/)\n",
+    "- [W3Schools Python Basics](https://www.w3schools.com/python/)\n",
+    "- [Real Python](https://realpython.com/python-basics/)\n",
+    "- [Learn Python – FreeCodeCamp Video](https://www.youtube.com/watch?v=rfscVS0vtbw)\n",
+    "- [Jupyter Notebook Documentation](https://jupyter-notebook.readthedocs.io/en/stable/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "321374a2",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### 🧠 Reflection Question:\n",
+    "What are some things you wish a computer could help you with today?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "420918b7",
+   "metadata": {},
+   "source": [
+    ">Next: We’ll dive into storing data using variables!"
    ]
   }
  ],
