moving forward 1 step at a time

--- a/Notebooks/Beginner/module_1_introduction.ipynb
+++ b/Notebooks/Beginner/module_1_introduction.ipynb
@@ -90,6 +90,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3b290ed",
+   "metadata": {},
+   "source": [
+    "#### 🔑 Key Concept: Comments\n",
+    ">Comments start with the `#` symbol and are used to explain code. Python ignores these lines when running the code. They are useful for adding notes or explanations to your code.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c108d201",
    "metadata": {},
    "source": [
