--- a/Notebooks/Beginner/module_2_variables.ipynb
+++ b/Notebooks/Beginner/module_2_variables.ipynb
@@ -115,13 +115,112 @@
    "id": "f4fcbf9b",
    "metadata": {},
    "source": [
-    "#### 🔑Key Concept: Data Types"
+    "#### 🔑Key Concept: Data Types\n",
+    ">Data types tell us what kind of data a variable holds. In Python, there are several basic data types, but we'll focus on three common ones:\n",
+    "1. **Strings**: Text data, like names or descriptions. Strings are enclosed in quotes.\n",
+    "   - Example 1: `item_name = \"Plantain\"`\n",
+    "   - Example 2: `market_name = 'Makola Market'`\n",
+    "2. **Integers**: Whole numbers, like quantities or counts. They do not have decimal points.\n",
+    "    - Example 1: `quantity = 10`\n",
+    "3. **Floats**: Decimal numbers, used for prices or measurements that require precision.\n",
+    "   - Example 1: `total_price = 12.50`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7af80641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run this code cell. use the play button or shift+enter\n",
+    "#variable for an item name (String)\n",
+    "item_name = \"Onions\"\n",
+    "\n",
+    "#variable for an quantity (Integer)\n",
+    "quantity = 5\n",
+    "\n",
+    "#variable price per item (Float)\n",
+    "price_per_item = 2.5\n",
+    "\n",
+    "#print the item name, quantity and price per item\n",
+    "print(\"Item Name:\", item_name)  \n",
+    "print(\"Quantity:\", quantity)\n",
+    "print(\"Price per item:\", price_per_item)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "1b4a6a4d",
    "metadata": {},
+   "source": [
+    "#### 🔢 Common Operations Explained\n",
+    "> You can perform various operations with these data types. Here are some common ones:\n",
+    "1. **Addition**: Combining numbers.\n",
+    "   - Example: `total_price = 12.50 + 5.00` (This adds two prices together)\n",
+    "\n",
+    "    **Note**: In Python, you can also add strings together, which is called concatenation.\n",
+    "   - Example: `full_name = \"Adwoa\" + \" \" + \"Adom\" ` (This combines two strings with a space in between)\n",
+    "2. **Division**: Splitting a quantity into equal parts.\n",
+    "   - Example: `half_price = price / 2` (This calculates half the price of an item)\n",
+    "3. **Multiplication**: Repeating a quantity.\n",
+    "   - Example: `total_cost = price * quantity` (This calculates the total cost of multiple items)\n",
+    "\n",
+    "   **Note**: You can also multiply strings, which repeats the string.\n",
+    "   - Example: `repeated_name = \"Kwabena\" * 3` (This repeats the string \"Kwabena\" three times)\n",
+    "4. **Subtraction**: Finding the difference between two numbers.\n",
+    "   - Example: `change = amount_paid - total_price` (This calculates the change after a purchase)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "46924d4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run this code cell. use the play button or shift+enter\n",
+    "#Let's increase the price of the item by 1 cedi\n",
+    "price_per_item = price_per_item + 1\n",
+    "\n",
+    "#Let's calculate a 50% discount on the item\n",
+    "discount = price_per_item / 2\n",
+    "\n",
+    "#Let's add additional information to the item name \n",
+    "# to show it is discounted\n",
+    "item_name = item_name + \" (Discounted)\"\n",
+    "\n",
+    "#Let's calculate the total price before discount\n",
+    "total_price = quantity * price_per_item\n",
+    "\n",
+    "#Let's calculate the total price after discount\n",
+    "total_price_after_discount = total_price - discount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8188c2bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's print the expense information\n",
+    "print(\"Expense Information:\")\n",
+    "print(\"-\" *30)\n",
+    "print(\"Item Name:\", item_name)\n",
+    "print(\"Quantity:\", quantity)\n",
+    "print(\"Price per item: GH₵\", price_per_item)\n",
+    "print(\"Total Price before discount: GH₵\", total_price)\n",
+    "print(\"Discount: GH₵\", discount)    \n",
+    "print(\"Total Price after discount: GH₵\", total_price_after_discount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f36640ef",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
