Look break but back taking steps

--- a/Notebooks/Beginner/module_1_introduction.ipynb
+++ b/Notebooks/Beginner/module_1_introduction.ipynb
@@ -183,6 +183,7 @@
    "id": "9c5fdfc5",
    "metadata": {},
    "source": [
+    "---\n",
     "#### 📝Activity: Print a Greeting\n",
     "> Let's start by printing a simple greeting in Python. You can use the `print()` function to display messages. Just like how we greet each other in Ghana, we can print a friendly message.\n",
     "\n",
@@ -210,12 +211,11 @@
     "#### 📝Activity: Introduce yourself\n",
     "> Now, let's introduce ourselves! Use the `print()` function to display your name, age, favourite food, and a fun fact about yourself. \n",
     "\n",
-    "✅ Try This:\n",
+    "🧪 Try This:\n",
     "1. Print your name and favorite food\n",
     "2. Print your age and a short sentence about why you’re learning Python\n",
     "3. Print a fun fact about yourself and your favourite number\n",
-    "\n",
-    "```python"
+    "\n"
    ]
   },
   {
@@ -234,6 +234,21 @@
    "metadata": {},
    "source": [
     "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43a2b731",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 📝 Summary:\n",
+    "In this module, you:\n",
+    "- Learned what Python is and why it’s useful\n",
+    "- Discovered Jupyter Notebooks and how to run Python code\n",
+    "- Understood the importance of comments in code\n",
+    "- Wrote your first lines of code using the `print()` function\n",
+    "- Practiced printing messages and introducing yourself"
    ]
   },
   {
