--- a/Notebooks/Beginner/module_2_variables.ipynb
+++ b/Notebooks/Beginner/module_2_variables.ipynb
@@ -216,11 +216,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f44b523",
+   "metadata": {},
+   "source": [
+    "#### 🔢 Other Operations Explained\n",
+    "> You can perform these operations as well:\n",
+    "1. **Exponentiation**: Raising a number to a power.\n",
+    "   - Example: `volume_of_sugar_cube = width ** 3` (This calculates the volume of a sugar cube with width raised to the power of 3)\n",
+    "   - Note: This is useful for calculating areas or volumes, like the volume of a cube.\n",
+    "2. **Floor Division**: Dividing and rounding down to the nearest whole number.\n",
+    "   - Example: `whole_parts = total_quantity // 3` (This calculates how many whole parts fit into the total quantity)\n",
+    "3. **Modulus**: Finding the remainder after division.\n",
+    "   - Example: `remainder = total_quantity % 3` (This calculates how many items are left after dividing into groups of 3)\n",
+    "   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f36640ef",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#run this code cell. use the play button or shift+enter\n",
+    "market_width = 100  # in meters. Market has same width throughout\n",
+    "market_area = market_width ** 2  # Area of the market is width squared\n",
+    "\n",
+    "quantity = 15  # fingers of plantain\n",
+    "full_bunch = quantity // 7  # each bunch has 7 fingers\n",
+    "remaining_fingers = quantity % 7  # remaining fingers after full bunches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93ca7d91",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 📝Activity: Visit to the market\n",
+    "> Now, let's introduce simulate buying and selling items in a market at different prices.\n",
+    "\n",
+    "🧪 Try This:\n",
+    "1. Print market name and a short description of what you can buy there\n",
+    "2. Print items you bought and their prices\n",
+    "3. Update price and quantity of an item\n",
+    "4. Calculate total cost of items bought\n",
+    "5. Print a receipt with item names, quantities, and total cost\n",
+    "6. Try new arithmetic or string operations\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffbd3939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Visit the market activity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c136170",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 📝 Summary:\n",
+    "In this module, you:\n",
+    "- Learned about variables and how to assign values to them\n",
+    "- Explored basic data types: strings, integers, and floats\n",
+    "- Practiced common operations like addition, multiplication, and string concatenation\n",
+    "- Applied these concepts to relatable African market scenarios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c67a164",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "#### 📚 Additional Resources:\n",
+    "- [Python Variables](https://www.w3schools.com/python/python_variables.asp)\n",
+    "- [Python Data Types](https://www.w3schools.com/python/python_datatypes.asp)\n",
+    "- [Python Arithmetic Operators](https://www.w3schools.com/python/python_operators.asp)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5212138b",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 🧠 Reflection Question:\n",
+    "What are 3 real-life examples in your daily routine where you could use variables?\n",
+    "_(Hint: Think about transport fares, number of meals, mobile data usage, personal finances.)\n",
+    "\n",
+    ">Next: We'll build decision-making using conditional statements!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f84a43bf",
+   "metadata": {},
    "source": []
   }
  ],
