--- a/Notebooks/Beginner/module_2_variables.ipynb
+++ b/Notebooks/Beginner/module_2_variables.ipynb
@@ -36,9 +36,10 @@
     "#### 🎯 Objectives\n",
     "By the end of this module, you will:\n",
     "- Understand variables and how to assign them  \n",
-    "- Learn basic data types: strings, integers, floats\n",
-    "- Practice with relatable cultural scenarios\n",
+    "- Learn basic data types: strings, integers, floats, boolean\n",
+    "- Convert between data types using functions like `str()`, `int()`, and `float()`\n",
     "- Discover common operations with these data types\n",
+    "- Practice with relatable cultural scenarios\n",
     "\n",
     "---"
    ]
@@ -123,7 +124,9 @@
     "2. **Integers**: Whole numbers, like quantities or counts. They do not have decimal points.\n",
     "    - Example 1: `quantity = 10`\n",
     "3. **Floats**: Decimal numbers, used for prices or measurements that require precision.\n",
-    "   - Example 1: `total_price = 12.50`"
+    "   - Example 1: `total_price = 12.50`\n",
+    "4. **Booleans**: True or False values, often used for conditions.\n",
+    "   - Example 1: `is_available = True`"
    ]
   },
   {
@@ -143,10 +146,56 @@
     "#variable price per item (Float)\n",
     "price_per_item = 2.5\n",
     "\n",
+    "#variable for item availability (Boolean)\n",
+    "is_available = True\n",
+    "\n",
     "#print the item name, quantity and price per item\n",
     "print(\"Item Name:\", item_name)  \n",
     "print(\"Quantity:\", quantity)\n",
-    "print(\"Price per item:\", price_per_item)"
+    "print(\"Price per item:\", price_per_item)\n",
+    "print(\"Is available:\", is_available)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0838f3a5",
+   "metadata": {},
+   "source": [
+    "#### 🔄 Converting Data Types\n",
+    ">Sometimes, you may need to convert data from one type to another. For example, if you have a number stored as a string and you want to perform calculations with it, you need to convert it to an integer or float. There are built-in functions in Python to help with this:\n",
+    "- `str()`: Converts a value to a string\n",
+    "- `int()`: Converts a value to an integer   \n",
+    "- `float()`: Converts a value to a float\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "552c2224",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run this code cell. use the play button or shift+enter\n",
+    "#Converting a string to an integer\n",
+    "age_str = \"25\"\n",
+    "age_int = int(age_str)\n",
+    "print(\"Age as integer:\", age_int)\n",
+    "\n",
+    "#Converting an integer to a string\n",
+    "price_int = 100 \n",
+    "price_str = str(price_int)\n",
+    "print(\"Price as string:\", price_str)\n",
+    "\n",
+    "#Converting a float to an integer\n",
+    "height_float = 5.9 \n",
+    "height_int = int(height_float)\n",
+    "print(\"Height as integer:\", height_int)\n",
+    "\n",
+    "#Converting a string to a float\n",
+    "weight_str = \"70.5\" \n",
+    "weight_float = float(weight_str)\n",
+    "print(\"Weight as float:\", weight_float)\n",
+    "\n"
    ]
   },
   {
@@ -255,7 +304,7 @@
    "source": [
     "---\n",
     "#### 📝Activity: Visit to the market\n",
-    "> Now, let's introduce simulate buying and selling items in a market at different prices.\n",
+    "> Now, let's simulate buying and selling items in a market at different prices.\n",
     "\n",
     "🧪 Try This:\n",
     "1. Print market name and a short description of what you can buy there\n",
@@ -286,7 +335,8 @@
     "#### 📝 Summary:\n",
     "In this module, you:\n",
     "- Learned about variables and how to assign values to them\n",
-    "- Explored basic data types: strings, integers, and floats\n",
+    "- Explored basic data types: strings, integers, floats, boolean\n",
+    "- Converted between data types using functions like `str()`, `int()`, and `float()`\n",
     "- Practiced common operations like addition, multiplication, and string concatenation\n",
     "- Applied these concepts to relatable African market scenarios"
    ]
