--- a/Notebooks/Beginner/module_3_conditionals.ipynb
+++ b/Notebooks/Beginner/module_3_conditionals.ipynb
@@ -59,6 +59,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12ff9c38",
+   "metadata": {},
+   "source": [
+    "![Ampe](../../images/ampe_gh.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "65b58e12",
