--- a/Notebooks/Beginner/module_5_functions.ipynb
+++ b/Notebooks/Beginner/module_5_functions.ipynb
@@ -46,6 +46,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec53d97e",
+   "metadata": {},
+   "source": [
+    "![Ghana Jollof Rice](../../images/jollof_gh.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "28699768",
@@ -325,6 +333,18 @@
     "-learned functions can take parameters and return values\n",
     "- learned defining a function does nothing until it's called\n",
     "- practiced using functions to automate repetitive tasks in cooking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c819fd3",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### 📚 Additional Resources:\n",
+    "- [Python Functions Documentation](https://docs.python.org/3/tutorial/controlflow.html#defining-functions)\n",
+    "- [W3Schools Python Functions](https://www.w3schools.com/python/python_functions.asp)\n",
+    "- [Real Python: Python Functions](https://realpython.com/defining-functions-in-python/)"
    ]
   },
   {
