--- a/Notebooks/Beginner/module_2_variables.ipynb
+++ b/Notebooks/Beginner/module_2_variables.ipynb
@@ -45,6 +45,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ae0479b0",
+   "metadata": {},
+   "source": [
+    "![Ghanaian Market](../../images/market_gh.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "88f672bd",
