--- a/Notebooks/Beginner/module_4_loops.ipynb
+++ b/Notebooks/Beginner/module_4_loops.ipynb
@@ -44,6 +44,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "198caa40",
+   "metadata": {},
+   "source": [
+    "![Ampe Tournament](../../images/ampe_t_gh.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7c9bc5df",
@@ -127,13 +135,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd9a60be",
+   "id": "7a62761e",
    "metadata": {},
    "source": [
     "---\n",
     "🧪 Try This:\n",
     "1. Change the number in range() to 5.\n",
-    "2. Modify the countdown to start from 10.\n",
+    "2. Modify the countdown to start from 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6c910e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#try here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd9a60be",
+   "metadata": {},
+   "source": [
     "---\n",
     "\n",
     "#### 📝Activity: Ampe Tournament with Loop\n",
